// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginButton matches snapshot with user logged in as guest 1`] = `
<div>
  <div
    className="MuiAvatar-root-9 MuiAvatar-colorDefault-10"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-48 MuiSvgIcon-fontSizeSmall-55"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2H5c-1.11 0-2 .9-2 2zm12 4c0 1.66-1.34 3-3 3s-3-1.34-3-3 1.34-3 3-3 3 1.34 3 3zm-9 8c0-2 4-3.1 6-3.1s6 1.1 6 3.1v1H6v-1z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
  <button
    aria-owns={null}
    className="MuiButtonBase-root-38 MuiButton-root-12 MuiButton-text-14 MuiButton-flat-17 MuiButton-colorInherit-33"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-13"
    >
      Test name
    </span>
    <span
      className="MuiTouchRipple-root-41"
    />
  </button>
</div>
`;

exports[`LoginButton matches snapshot with user logged in with blockstack 1`] = `
<div>
  <div
    aria-describedby={null}
    className="MuiAvatar-root-9 MuiAvatar-colorDefault-10"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    title="Test"
  />
  <button
    aria-owns={null}
    className="MuiButtonBase-root-38 MuiButton-root-12 MuiButton-text-14 MuiButton-flat-17 MuiButton-colorInherit-33"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-13"
    >
      Test name
    </span>
    <span
      className="MuiTouchRipple-root-41"
    />
  </button>
</div>
`;
